@@ -45,21 +45,21 @@ except ImportError:
 #  - SHA1 sum of package
 archives = (
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-12324.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-12664.tgz',
      'xapian-core.tgz',
-     'ac246a50656869b6ea5b50d2c932477c98aaa539',
+     'ab2e18789a861ff78afb9d63aee4bb4eb45460c8',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-12324.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-12664.tgz',
      'xapian-bindings.tgz',
-     '67c73be7808c689d2761e3ba176edd0605c1041c',
+     'b721a03b4a010064a097f92a936a745f8fd64a44',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-12324.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-12664.tgz',
      'win32msvc.tgz',
-     'badb435d583ffcc4806c133dce4daad2e8dff3c0',
+     '624b0e7de67532f4da31de4ae46f0f429b6844a8',
      'xapian-core/win32',
     ),
     ('Xapian extras',
