@@ -1,3 +1,7 @@
+Fri May 08 08:37:09 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* libs/get_xapian.py: New xapian tarballs.
+
 Fri May 08 08:22:47 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* utils/make_xappy_tarballs: More updates to branchpoints.
